--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,36 @@
 
 * {
   border: 1px solid green;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #0b2434;
 }
 
 main {
   display: flex;
-  flex-direction: column;
+  margin: 100px, auto;
   align-items: center;
+  justify-content: center;
   width: 360px;
+  height: 380px;
+}
+.gameArea {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px, 20px;
+  border-radius: 5%;
+  background-color: #f5f5f5;
+  width: 323px;
+  height: 323px;
+}
+
+.gameArea > h1 {
+  color: #340b0b;
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
