--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,9 @@
 }
 
 * {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -24,7 +25,8 @@ main {
 }
 .gameArea {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   margin: 30px, 20px;
   border-radius: 5%;
@@ -39,4 +41,27 @@ main {
   font-weight: 700;
   margin: 0;
   padding: 0;
+}
+
+.dice {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+}
+
+.die {
+  width: 35px;
+  height: 35px;
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 24px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  color: #2b283a;
+  cursor: pointer;
+  background-color: white;
 }
