--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,21 @@ main {
   cursor: pointer;
   background-color: white;
 }
+
+.die:hover {
+  background-color: #f5f5f5;
+}
+.button--roll {
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+}
+
+.button--roll:focus {
+  outline: none;
+}
+
+.button--roll:active {
+  background: #5035ff;
+  box-shadow: inset 0px 1.6px 3.84px rgba(0, 0, 0, 0.18);
+}
