--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ main {
   margin: 100px, auto;
   align-items: center;
   justify-content: center;
-  width: 360px;
-  height: 380px;
+  width: 720px;
+  height: 720px;
 }
 .instructions {
   font-family: "Inter", sans-serif;
@@ -29,7 +29,7 @@ main {
   margin: 0px 20px;
   text-align: center;
   color: #340b0b;
-  font-size: 0.7rem;
+  font-size: 1.5rem;
 }
 .gameArea {
   display: flex;
@@ -39,8 +39,8 @@ main {
   margin: 30px, 20px;
   border-radius: 5%;
   background-color: #f5f5f5;
-  width: 323px;
-  height: 323px;
+  width: 500px;
+  height: 600px;
 }
 
 .gameArea > h1 {
@@ -59,12 +59,12 @@ main {
 }
 
 .die {
-  width: 35px;
-  height: 35px;
+  min-width: 35px;
+  min-height: 35px;
   font-family: "Karla";
   font-style: normal;
   font-weight: 700;
-  font-size: 10px;
+  font-size: 1rem;
   line-height: 24px;
   text-align: center;
   border-radius: 10px;
