--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
   max-width: 1280px;
+  min-width: 20px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -17,11 +18,12 @@ body {
 
 main {
   display: flex;
+  flex-direction: column;
   margin: 100px, auto;
   align-items: center;
   justify-content: center;
-  width: 720px;
-  height: 720px;
+  max-width: 720px;
+  /* height: 720px; */
 }
 .instructions {
   font-family: "Inter", sans-serif;
@@ -39,7 +41,8 @@ main {
   margin: 30px, 20px;
   border-radius: 5%;
   background-color: #f5f5f5;
-  width: 500px;
+  min-width: 300px;
+  max-width: 500px;
   height: 600px;
 }
 
@@ -81,6 +84,7 @@ main {
   background: #5035ff;
   box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
   border-radius: 3.81277px;
+  font-size: 1.5rem;
 }
 
 .button--roll:focus {
@@ -94,4 +98,34 @@ main {
 .isHeld {
   background-color: #59e391;
   color: white;
+}
+
+.button--stats {
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  width: 100px;
+  margin: 30px 0px;
+  padding: 10px;
+}
+
+.stats {
+  display: flex;
+  color: #2b283a;
+  font-size: 1.2rem;
+  justify-content: space-evenly;
+  align-items: center;
+  /* margin: 30px, 100px; */
+  border-radius: 5%;
+  background-color: #f5f5f5;
+  width: 200px;
+  height: 150px;
+}
+
+.statsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
 }
