--- a/src/App.css
+++ b/src/App.css
@@ -108,23 +108,35 @@ main {
   padding: 10px;
 }
 
+.button--resetStats {
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  padding: 10px;
+  margin: 10px 0px;
+}
+
 .stats {
   display: flex;
   color: #2b283a;
   font-size: 1.2rem;
   justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
   /* margin: 30px, 100px; */
   border-radius: 5%;
   background-color: #f5f5f5;
+  line-height: 2rem;
   width: 200px;
-  height: 150px;
+  /* height: 250px; */
+  padding: 10px 0px;
 }
 
 .statsContainer {
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
+
   align-items: center;
   height: 300px;
 }
