--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ main {
   justify-content: space-evenly;
   align-items: center;
   margin: 30px, 20px;
-  border-radius: 5%;
+  border-radius: 20px;
   background-color: #f5f5f5;
   min-width: 300px;
   max-width: 500px;
@@ -124,7 +124,7 @@ main {
   flex-direction: column;
   align-items: center;
   /* margin: 30px, 100px; */
-  border-radius: 5%;
+  border-radius: 20px;
   background-color: #f5f5f5;
   line-height: 2rem;
   width: 200px;
